--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "author": "Cristian",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "@types/uuid": "^9.0.1",
+    "express": "^4.18.2",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
