--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -8,7 +8,7 @@ phases:
       - REPOSITORY_URI=339371549069.dkr.ecr.us-east-1.amazonaws.com/cursonodejs12
       - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 339371549069.dkr.ecr.us-east-1.amazonaws.com
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)}
-      - IMAGE_TAG=${COMMIT_HASH:=latest}
+      - IMAGE_TAG=${COMMIT_HASH:=latest
 
   build:
     commands:
