--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -17,6 +17,7 @@ phases:
     commands:
       - echo Build started on `date`
       - echo Building docker image
+      - aws s3 cp s3://cursonodejs12/$ENVIRONMENT/env.yaml env.yaml
       - npm install
       - docker build -t $REPOSITORY_URI:latest .
       - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
