--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,19 +1,37 @@
 version: "3.8"
 
 services:
-  web-nginx:
-    image: nginx:alpine
-    container_name: web-nginx
+  mysql-server:
+    image: mysql:8
+    container_name: mysql-server
+    restart: always
     ports:
-      - "4100:80"
+      - 3306:3306
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: db
+      MYSQL_USER: user
+      MYSQL_PASSWORD: password
     networks:
-      - my-net
+      - backend
     volumes:
-      - my-vol:/usr/share/nginx/html
+      - mysql-vol:/var/lib/mysql
 
-networks: 
-  my-net:
+  mysql-client:
+    image: phpmyadmin:5
+    container_name: mysql-client
+    restart: always
+    ports:
+      - 8200:80
+    environment:
+      - PMA_ARBITRARY=1
+    networks:
+      - backend
+
+networks:
+  backend:
+    name: net-backend
     driver: bridge
 
 volumes:
-  my-vol:
+  mysql-vol:
