--- a/package.json
+++ b/package.json
@@ -15,13 +15,17 @@
     "@types/cors": "^2.8.13",
     "@types/uuid": "^9.0.1",
     "chalk": "^4.1.2",
+    "class-validator": "^0.14.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "gulp": "^4.0.2",
     "gulp-uglify-es": "^3.0.0",
     "helmet": "^6.1.5",
     "http-server": "^14.1.1",
+    "mysql2": "^3.3.0",
+    "reflect-metadata": "^0.1.13",
     "rimraf": "^5.0.0",
+    "typeorm": "^0.3.16",
     "uuid": "^9.0.0",
     "winston": "^3.8.2",
     "winston-daily-rotate-file": "^4.7.1"
